fix cropperPage orientation problem

--- a/root/front/basic/css/edit-pic.css
+++ b/root/front/basic/css/edit-pic.css
@@ -7,7 +7,9 @@ body {
     padding: 0;
     height: 100%;
 }
-
+form{
+    height: 100%;
+}
 a {
     text-decoration: none;
     color: #7d7d7d;
